--- a/package.json
+++ b/package.json
@@ -1,33 +1,18 @@
 {
-  "name": "webpack-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
-  "dependencies": {
-    "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.6.0",
-    "babel-loader": "^6.2.4",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "jsx-loader": "^0.13.2",
-    "postcss-color-rebeccapurple": "^2.0.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.3",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "jsx-loader": "^0.13.2",
-    "postcss-loader": "^0.8.1",
-    "style-loader": "^0.13.0"
-  },
+  "name": "webpack",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "ejs": "^2.4.1",
+    "express": "~4.2.0",
+    "jade": "~1.3.0",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
+  }
 }
