--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
-  "name": "webpack",
+  "name": "react-demo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "autoprefixer": "^6.3.3",
+    "autoprefixer-core": "^6.0.1",
+    "babel-core": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
+    "css-loader": "^0.23.1",
     "debug": "~0.7.4",
     "ejs": "^2.4.1",
     "express": "~4.2.0",
+    "express-urlrewrite": "^1.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jade": "~1.3.0",
+    "jsx-loader": "^0.13.2",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "postcss-color-rebeccapurple": "^2.0.0",
+    "postcss-loader": "^0.8.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
+    "static-favicon": "~1.0.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-dev-server": "^1.14.0"
   }
 }
